--- a/scss/layout/_about-us.scss
+++ b/scss/layout/_about-us.scss
@@ -19,9 +19,6 @@
    Meet Our Staff
    ------------------------*/
 
-   #meet-staff-title h1 {
-   	text-align: center;
-   }
 
    .meet-staff-col {
    	margin-top: 100px;
@@ -82,9 +79,9 @@
    	margin-top: 70px;
    }
 
-   .get-in-touch {
+  /* .get-in-touch {
    	margin-top: -30px;
-   }
+   }*/
 
 
 
