--- a/scss/layout/_contact-us.scss
+++ b/scss/layout/_contact-us.scss
@@ -14,6 +14,13 @@
    	height: 40px;
    }
 
+   .name-hint,
+   .email-hint {
+    margin-left: 8px;
+    color: red;
+
+   }
+
    textarea:focus, 
    input:focus{
     outline: none;
@@ -21,4 +28,19 @@
 
 	.contact-information {
 		text-align: center;
+	}
+
+	#map {
+		width: 100%;
+        height: 300px;
+        margin-top: 60px;
+	}
+	
+	#send-btn {
+		padding: 2% 46% 2% 46%;
+		border: 2px solid $color-main-blue;
+	}
+
+	.send-btn-wrapper {
+		margin: 45px 0 25px 0;
 	}
