--- a/css/application.css
+++ b/css/application.css
@@ -283,12 +283,16 @@ Meet Our Staff
 .have-questions {
   height: 200px; }
 
-.question {
-  margin-top: 70px; }
+.question,
+.get-in-touch {
+  text-align: center; }
 
-/* .get-in-touch {
- 	margin-top: -30px;
- }*/
+.question {
+  margin-top: 80px; }
+
+.get-in-touch {
+  margin-top: 100px; }
+
 .claims-col {
   text-align: center;
   margin-bottom: 30px; }
@@ -390,6 +394,14 @@ th, td {
   color: #fff;
   border: 1px solid #fff;
   padding: 20px 42px 20px 42px; }
+
+.btn-blue {
+  border: 1px solid #232ed1;
+  text-decoration: none;
+  padding: 16px 22px; }
+
+.btn-blue:hover {
+  text-decoration: none; }
 
 .who-we-are-text a {
   display: block; }
