--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -14,6 +14,17 @@
 	padding: 20px 42px 20px 42px;
 }
 
+.btn-blue {
+	border: 1px solid $color-main-blue;
+	text-decoration: none;
+	padding: 16px 22px;
+	
+}
+
+.btn-blue:hover {
+	text-decoration: none;
+}
+
 .who-we-are-text a {
   display: block;
   
