--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -12,12 +12,11 @@
  		display: none;
  	}
 
- 	.question {
+ 	/*.question {
  		margin-left: 20%;
- 	}
+ 	}*/
 
  	.get-in-touch {
  		margin-top: 30px;
- 		margin-left: 30%;
  	}
  }
